--- a/bulma-extensions/timeline.html
+++ b/bulma-extensions/timeline.html
@@ -3,7 +3,98 @@ title: Timeline
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: timeline
+variables:
+- name: $timeline-marker-background-color
+  value: $white
+- name: $timeline-marker-border
+  value: .1em solid $grey-light
+- name: $timeline-line
+  value: .1rem solid $grey-light
+- name: $timeline-content-padding
+  value: 1em 0 0 2em
+- name: $timeline-icon-size
+  value: $size-5
+- name: $timeline-header-width
+  value: 4em
+- name: $dimensions
+  value: 16 24 32 48 64 96 128
 ---
+
+{% capture timeline_example %}
+<ul class="timeline">
+  <li class="timeline-header">
+    <span class="button is-primary">Start</span>
+  </li>
+  <li class="timeline-item">
+    <div class="timeline-marker"></div>
+    <div class="timeline-content">
+      <p class="heading">January 2016</p>
+      <p>Timeline content - Can include any HTML element</p>
+    </div>
+  </li>
+  <li class="timeline-item">
+    <div class="timeline-marker is-icon">
+      <figure class="image is-32x32">
+        <img src="http://bulma.io/images/placeholders/32x32.png">
+      </figure>
+    </div>
+    <div class="timeline-content">
+      <p class="heading">February 2016</p>
+      <p>Timeline content - Can include any HTML element</p>
+    </div>
+  </li>
+  <li class="timeline-header">
+    <span class="button is-primary">2017</span>
+  </li>
+  <li class="timeline-item">
+    <div class="timeline-content">
+      <p class="heading">March 2017</p>
+      <p>Timeline content - Can include any HTML element</p>
+    </div>
+  </li>
+  <li class="timeline-header">
+    <span class="button is-primary">End</span>
+  </li>
+</ul>
+{% endcapture %}
+
+{% capture timeline_colors_example %}
+<ul class="timeline">
+  <li class="timeline-header">
+    <span class="button is-primary">Start</span>
+  </li>
+  <li class="timeline-item is-primary">
+    <div class="timeline-marker"></div>
+    <div class="timeline-content">
+      <p class="heading">January 2016</p>
+      <p>Timeline content - Can include any HTML element</p>
+    </div>
+  </li>
+  <li class="timeline-item is-warning">
+    <div class="timeline-marker is-icon">
+      <figure class="image is-32x32">
+        <img src="http://bulma.io/images/placeholders/32x32.png">
+      </figure>
+    </div>
+    <div class="timeline-content">
+      <p class="heading">February 2016</p>
+      <p>Timeline content - Can include any HTML element</p>
+    </div>
+  </li>
+  <li class="timeline-header">
+    <span class="button is-primary">2017</span>
+  </li>
+  <li class="timeline-item is-danger">
+    <div class="timeline-content">
+      <p class="heading">March 2017</p>
+      <p>Timeline content - Can include any HTML element</p>
+    </div>
+  </li>
+  <li class="timeline-header">
+    <span class="button is-primary">End</span>
+  </li>
+</ul>
+{% endcapture %}
 
 {% include_relative subnav-bulma-extensions.html %}
 
@@ -16,10 +107,30 @@ doc-subtab: timeline
     {%
       include meta.html
       colors=true
-      sizes=true
       variables=true
     %}
 
     <hr>
+
+    <div class="columns">
+      <div class="column">
+        {{timeline_example}}
+      </div>
+      <div class="column">
+        {% highlight html %}{{timeline_example}}{% endhighlight %}
+      </div>
+    </div>
+
+    {% include anchor.html name="Colors" %}
+    <div class="columns">
+      <div class="column">
+        {{timeline_colors_example}}
+      </div>
+      <div class="column">
+        {% highlight html %}{{timeline_colors_example}}{% endhighlight %}
+      </div>
+    </div>
+
+    {% include variables.html %}
   </div>
 </section>
