update warning message

--- a/bulma-extensions/switch.html
+++ b/bulma-extensions/switch.html
@@ -209,8 +209,8 @@ variables:
         {% highlight html %}{{switch_example}}{% endhighlight %}
       </div>
     </div>
-    <div class="notification is-danger has-text-centered">
-      <p>Please note that due to <strong>CSS limitation</strong> the structure of the checkbox is different of the one provided by Bulma core.<br /><i>(Input is not wrapped by the label)</i></p>
+    <div class="notification is-warning has-text-centered">
+      <p>Please note that due to <strong>CSS limitation</strong> the structure of the checkbox is different of the one provided as exxample in Bulma's documentation.<br /><i>(Input is not wrapped by the label)</i></p>
     </div>
 
     {% include anchor.html name="Colors" %}
