--- a/bulma-extensions/subnav-bulma-extensions.html
+++ b/bulma-extensions/subnav-bulma-extensions.html
@@ -19,6 +19,9 @@
       <a class="navbar-item is-tab {% if page.doc-subtab == 'pageloader' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/pageloader">
         Page-loader
       </a>
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'pricingtable' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/pricing-table">
+        Pricing table
+      </a>
       <a class="navbar-item is-tab {% if page.doc-subtab == 'ribbon' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/ribbon">
         Ribbon
       </a>
