Fix pricingtable page

--- a/bulma-extensions/pricing-table.html
+++ b/bulma-extensions/pricing-table.html
@@ -70,6 +70,7 @@ variables:
 
     <hr>
 
+    <p>Just add <span class="tag">is-hoverable</span> class to the pricing table container to add an hover effect on each plan.</p>
     <div class="bd-example">
       {{pricingtable_example}}
     </div>
