Add links to github repositories

--- a/bulma-extensions/pageloader.html
+++ b/bulma-extensions/pageloader.html
@@ -13,10 +13,22 @@ doc-subtab: pageloader
 
 <section class="section">
   <div class="container">
-    <h1 class="title">Page-loader</h1>
-    <h2 class="subtitle">
-      Display a <strong>page-loader</strong> to inform user that content is loading, in different colors.
-    </h2>
+    <div class="columns">
+      <div class="column">
+        <h1 class="title">Page-loader</h1>
+        <h2 class="subtitle">
+          Display a <strong>page-loader</strong> to inform user that content is loading, in different colors.
+        </h2>
+      </div>
+      <div class="column is-narrow">
+        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-pageloader" target="_blank">
+          <span class="icon">
+              <i class="fa fa-github"></i>
+          </span>
+          <span>View on Github</span>
+        </a>
+      </div>
+    </div>
     {%
       include meta.html
       colors=true
