--- a/bulma-extensions/steps.html
+++ b/bulma-extensions/steps.html
@@ -198,10 +198,22 @@ variables:
 
 <section class="section">
   <div class="container">
-    <h1 class="title">Steps</h1>
-    <h2 class="subtitle">
-      Display <strong>steps</strong> for a process (like sign-up, or order, form), in different colors, sizes, and states
-    </h2>
+    <div class="columns">
+      <div class="column">
+        <h1 class="title">Steps</h1>
+        <h2 class="subtitle">
+          Display <strong>steps</strong> for a process (like sign-up, or order, form), in different colors, sizes, and states
+        </h2>
+      </div>
+      <div class="column is-narrow">
+        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-steps" target="_blank">
+          <span class="icon">
+              <i class="fa fa-github"></i>
+          </span>
+          <span>View on Github</span>
+        </a>
+      </div>
+    </div>
     {%
       include meta.html
       colors=true
