--- a/bulma-extensions/badge.html
+++ b/bulma-extensions/badge.html
@@ -57,10 +57,22 @@ variables:
 
 <section class="section">
   <div class="container">
-    <h1 class="title">Badge</h1>
-    <h2 class="subtitle">
-      Display a <strong>badge</strong> element in front of Bulma's element in different colors.<br />It's useful, for example, to display a number of items like notifications or mails.
-    </h2>
+    <div class="columns">
+      <div class="column">
+        <h1 class="title">Badge</h1>
+        <h2 class="subtitle">
+          Display a <strong>badge</strong> element in front of Bulma's element in different colors.<br />It's useful, for example, to display a number of items like notifications or mails.
+        </h2>
+      </div>
+      <div class="column is-narrow">
+        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-badge" target="_blank">
+          <span class="icon">
+              <i class="fa fa-github"></i>
+          </span>
+          <span>View on Github</span>
+        </a>
+      </div>
+    </div>
     {%
       include meta.html
       colors=true
