--- a/bulma-extensions/calendar.html
+++ b/bulma-extensions/calendar.html
@@ -9,10 +9,22 @@ doc-subtab: calendar
 
 <section class="section">
   <div class="container">
-    <h1 class="title">Calendar</h1>
-    <h2 class="subtitle">
-      Display a <strong>calendar</strong> for date selection or for planning management, in different colors and sizes
-    </h2>
+    <div class="columns">
+      <div class="column">
+        <h1 class="title">Calendar</h1>
+        <h2 class="subtitle">
+          Display a <strong>calendar</strong> for date selection or for planning management, in different colors and sizes
+        </h2>
+      </div>
+      <div class="column is-narrow">
+        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-calendar" target="_blank">
+          <span class="icon">
+              <i class="fa fa-github"></i>
+          </span>
+          <span>View on Github</span>
+        </a>
+      </div>
+    </div>
     {%
       include meta.html
       sizes=true
