--- a/bulma-extensions/checkradio.html
+++ b/bulma-extensions/checkradio.html
@@ -109,10 +109,22 @@ variables:
 
 <section class="section">
   <div class="container">
-    <h1 class="title">Checkradio</h1>
-    <h2 class="subtitle">
-      Make classic <strong>checkbox</strong> and <strong>radio</strong> more sexy in different colors, sizes, and states
-    </h2>
+    <div class="columns">
+      <div class="column">
+        <h1 class="title">Checkradio</h1>
+        <h2 class="subtitle">
+          Make classic <strong>checkbox</strong> and <strong>radio</strong> more sexy in different colors, sizes, and states
+        </h2>
+      </div>
+      <div class="column is-narrow">
+        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-badge" target="_blank">
+          <span class="icon">
+              <i class="fa fa-github"></i>
+          </span>
+          <span>View on Github</span>
+        </a>
+      </div>
+    </div>
     {%
       include meta.html
       colors=true
