--- a/bulma-extensions/divider.html
+++ b/bulma-extensions/divider.html
@@ -28,10 +28,22 @@ variables:
 
 <section class="section">
   <div class="container">
-    <h1 class="title">Divider</h1>
-    <h2 class="subtitle">
-      Display a vertical or horizontal <strong>divider</strong> to segment your design.
-    </h2>
+    <div class="columns">
+      <div class="column">
+        <h1 class="title">Divider</h1>
+        <h2 class="subtitle">
+          Display a vertical or horizontal <strong>divider</strong> to segment your design.
+        </h2>
+      </div>
+      <div class="column is-narrow">
+        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-divider" target="_blank">
+          <span class="icon">
+              <i class="fa fa-github"></i>
+          </span>
+          <span>View on Github</span>
+        </a>
+      </div>
+    </div>
     {%
       include meta.html
       variables=true
