--- a/bulma-extensions/pricing-table.html
+++ b/bulma-extensions/pricing-table.html
@@ -59,10 +59,22 @@ variables:
 
 <section class="section">
   <div class="container">
-    <h1 class="title">Pricing table</h1>
-    <h2 class="subtitle">
-      Display a <strong>pricing table</strong> easily.
-    </h2>
+    <div class="columns">
+      <div class="column">
+        <h1 class="title">Pricing table</h1>
+        <h2 class="subtitle">
+          Display a <strong>pricing table</strong> easily.
+        </h2>
+      </div>
+      <div class="column is-narrow">
+        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-pricingtable" target="_blank">
+          <span class="icon">
+              <i class="fa fa-github"></i>
+          </span>
+          <span>View on Github</span>
+        </a>
+      </div>
+    </div>
     {%
       include meta.html
       variables=true
