--- a/bulma-extensions/switch.html
+++ b/bulma-extensions/switch.html
@@ -188,10 +188,22 @@ variables:
 
 <section class="section">
   <div class="container">
-    <h1 class="title">Switch</h1>
-    <h2 class="subtitle">
-      Display classic <strong>checkbox</strong> as a switch button, in different colors, sizes, and states
-    </h2>
+    <div class="columns">
+      <div class="column">
+        <h1 class="title">Switch</h1>
+        <h2 class="subtitle">
+          Display classic <strong>checkbox</strong> as a switch button, in different colors, sizes, and states
+        </h2>
+      </div>
+      <div class="column is-narrow">
+        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-switch" target="_blank">
+          <span class="icon">
+              <i class="fa fa-github"></i>
+          </span>
+          <span>View on Github</span>
+        </a>
+      </div>
+    </div>
     {%
       include meta.html
       colors=true
