--- a/bulma-extensions/tooltip.html
+++ b/bulma-extensions/tooltip.html
@@ -32,10 +32,22 @@ doc-subtab: tooltip
 
 <section class="section">
   <div class="container">
-    <h1 class="title">Tooltip</h1>
-    <h2 class="subtitle">
-      Display a <strong>tooltip</strong> attached to any kind of element, in different position.
-    </h2>
+    <div class="columns">
+      <div class="column">
+        <h1 class="title">Tooltip</h1>
+        <h2 class="subtitle">
+          Display a <strong>tooltip</strong> attached to any kind of element, in different position.
+        </h2>
+      </div>
+      <div class="column is-narrow">
+        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-tooltip" target="_blank">
+          <span class="icon">
+              <i class="fa fa-github"></i>
+          </span>
+          <span>View on Github</span>
+        </a>
+      </div>
+    </div>
     {%
       include meta.html
     %}
