Fix pricing table

--- a/bulma-extensions/pricing-table.html
+++ b/bulma-extensions/pricing-table.html
@@ -20,7 +20,7 @@ variables:
 <div class="pricing-table is-hoverable">
   <ul class="pricing-plan">
     <li class="plan-header">Starter</li>
-    <li class="plan-price">$ <span class="plan-price-amount">20</span>/month</li>
+    <li class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>20</span>/month</li>
     <li class="plan-item">20GB Storage</li>
     <li class="plan-item">100 Domains</li>
     <li class="plan-item">1TB Bandwidth</li>
@@ -32,7 +32,7 @@ variables:
 
   <ul class="pricing-plan is-warning">
     <li class="plan-header">Startups</li>
-    <li class="plan-price">$ <span class="plan-price-amount">20</span>/month</li>
+    <li class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>40</span>/month</li>
     <li class="plan-item">20GB Storage</li>
     <li class="plan-item">100 Domains</li>
     <li class="plan-item">1TB Bandwidth</li>
@@ -44,7 +44,7 @@ variables:
 
   <ul class="pricing-plan is-active">
     <li class="plan-header">Growing Team</li>
-    <li class="plan-price">$ <span class="plan-price-amount">20</span>/month</li>
+    <li class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>60</span>/month</li>
     <li class="plan-item">20GB Storage</li>
     <li class="plan-item">100 Domains</li>
     <li class="plan-item">1TB Bandwidth</li>
@@ -56,7 +56,7 @@ variables:
 
   <ul class="pricing-plan is-danger">
     <li class="plan-header">Enterprise</li>
-    <li class="plan-price">$ <span class="plan-price-amount">20</span>/month</li>
+    <li class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>100</span>/month</li>
     <li class="plan-item">20GB Storage</li>
     <li class="plan-item">100 Domains</li>
     <li class="plan-item">1TB Bandwidth</li>
