--- a/bulma-extensions/pricing-table.html
+++ b/bulma-extensions/pricing-table.html
@@ -5,15 +5,19 @@ doc-tab: bulma-extensions
 doc-subtab: pricingtable
 variables:
 - name: $pricing-plan-border
-  value: .1rem solid $grey-lighter
+  value: .1rem solid $white-ter
 - name: $pricing-plan-border-radius
   value: $radius
 - name: $pricing-header-background
-  value: $grey-dark
+  value: $white
+- name: $pricing-item-background
+  value: $white-ter
 - name: $pricing-item-border
-  value: .1rem solid $grey-lighter
+  value: .1rem solid white
+- name: $pricing-item-color
+  value: $grey
 - name: $pricing-price-background
-  value: $grey-lighter
+  value: $white
 ---
 
 {% capture pricingtable_example %}
