update code sample

--- a/bulma-extensions/pricing-table.html
+++ b/bulma-extensions/pricing-table.html
@@ -27,7 +27,7 @@ variables:
     <li class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>20</span>/month</li>
     <li class="plan-item">20GB Storage</li>
     <li class="plan-item">100 Domains</li>
-    <li class="plan-item">1TB Bandwidth</li>
+    <li class="plan-item">-</li>
     <li class="plan-item">-</li>
     <li class="plan-action">
       <button class="button is-fullwidth" disabled="disabled">Current plan</button>
@@ -38,7 +38,7 @@ variables:
     <li class="plan-header">Startups</li>
     <li class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>40</span>/month</li>
     <li class="plan-item">20GB Storage</li>
-    <li class="plan-item">100 Domains</li>
+    <li class="plan-item">25 Domains</li>
     <li class="plan-item">1TB Bandwidth</li>
     <li class="plan-item">-</li>
     <li class="plan-action">
@@ -49,10 +49,10 @@ variables:
   <ul class="pricing-plan is-active">
     <li class="plan-header">Growing Team</li>
     <li class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>60</span>/month</li>
-    <li class="plan-item">20GB Storage</li>
-    <li class="plan-item">100 Domains</li>
+    <li class="plan-item">200GB Storage</li>
+    <li class="plan-item">50 Domains</li>
     <li class="plan-item">1TB Bandwidth</li>
-    <li class="plan-item">1000 Email Boxes</li>
+    <li class="plan-item">100 Email Boxes</li>
     <li class="plan-action">
       <button class="button is-fullwidth">Choose</button>
     </li>
@@ -61,7 +61,7 @@ variables:
   <ul class="pricing-plan is-danger">
     <li class="plan-header">Enterprise</li>
     <li class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>100</span>/month</li>
-    <li class="plan-item">20GB Storage</li>
+    <li class="plan-item">2TB Storage</li>
     <li class="plan-item">100 Domains</li>
     <li class="plan-item">1TB Bandwidth</li>
     <li class="plan-item">1000 Email Boxes</li>
