--- a/bulma-extensions/checkradio.html
+++ b/bulma-extensions/checkradio.html
@@ -17,6 +17,33 @@ variables:
 </div>
 {% endcapture %}
 
+{% capture radio_example %}
+<div class="field">
+  <input class="is-radio" id="exampleRadio0" type="radio" name="exampleRadio" disabled>
+  <label for="exampleRadio0">Radio choice - disabled</label>
+</div>
+
+<div class="field">
+  <input class="is-radio" id="exampleRadio" type="radio" name="exampleRadio">
+  <label for="exampleRadio">Radio choice</label>
+</div>
+
+<div class="field">
+  <input class="is-radio is-small is-success" id="exampleRadio2" type="radio" name="exampleRadio">
+  <label for="exampleRadio2">Radio choice - small</label>
+</div>
+
+<div class="field">
+  <input class="is-radio is-medium is-danger" id="exampleRadio3" type="radio" name="exampleRadio">
+  <label for="exampleRadio3">Radio choice - medium</label>
+</div>
+
+<div class="field">
+  <input class="is-radio is-large is-warning" id="exampleRadio4" type="radio" name="exampleRadio">
+  <label for="exampleRadio4">Radio choice - large</label>
+</div>
+{% endcapture %}
+
 {% capture checkradio_disabled_example %}
 <div class="field">
   <input class="is-checkbox" id="exampleCheckboxDisabled" type="checkbox" name="exampleCheckboxDisabled" checked="checked" disabled>
@@ -190,6 +217,16 @@ variables:
       </div>
       <div class="column">
         {% highlight html %}{{checkradio_disabled_example}}{% endhighlight %}
+      </div>
+    </div>
+
+    <h3 class="title">Radio</h3>
+    <div class="columns">
+      <div class="column">
+        {{radio_example}}
+      </div>
+      <div class="column">
+        {% highlight html %}{{radio_example}}{% endhighlight %}
       </div>
     </div>
 
