fix radio sample

--- a/bulma-extensions/checkradio.html
+++ b/bulma-extensions/checkradio.html
@@ -24,7 +24,7 @@ variables:
 </div>
 
 <div class="field">
-  <input class="is-radio" id="exampleRadio" type="radio" name="exampleRadio">
+  <input class="is-radio" id="exampleRadio" type="radio" name="exampleRadio" checked="checked">
   <label for="exampleRadio">Radio choice</label>
 </div>
 
