Fix calendar today

--- a/bulma-extensions/calendar.html
+++ b/bulma-extensions/calendar.html
@@ -108,7 +108,7 @@ doc-subtab: calendar
       <div class="calendar-date"><button class="date-item">1</button></div>
       <div class="calendar-date"><button class="date-item">2</button></div>
       <div class="calendar-date"><button class="date-item">3</button></div>
-      <div class="calendar-date tooltip" data-tooltip="Today"><button class="date-item date-today">4</button></div>
+      <div class="calendar-date tooltip" data-tooltip="Today"><button class="date-item is-today">4</button></div>
       <div class="calendar-date"><button class="date-item" disabled="">5</button></div>
       <div class="calendar-date"><button class="date-item">6</button></div>
       <div class="calendar-date"><button class="date-item">7</button></div>
