Fix colors + Change example + Add credit to aramvisser

--- a/bulma-extensions/steps.html
+++ b/bulma-extensions/steps.html
@@ -28,32 +28,32 @@ variables:
     </div>
     <div class="step-content">
       <p class="step-title">Step 1</p>
-      <p>This is the first step, which means you start here.</p>
+      <p>This is the first step of the process.</p>
     </div>
   </li>
   <li class="step-item is-active">
-    <div class="step-marker">
-      <span class="icon">
-        <i class="fa fa-star"></i>
-      </span>
-    </div>
+    <div class="step-marker"></div>
     <div class="step-content">
       <p class="step-title">Step 2</p>
-      <p>This is the second step. Once you complete the first step, you will end up here.</p>
+      <p>This is the second step. You get here once you have completed the first step.</p>
     </div>
   </li>
   <li class="step-item">
     <div class="step-marker">3</div>
     <div class="step-content">
       <p class="step-title">Step 3</p>
-      <p>This is the third step. This is halfway between the start and the end.</p>
+      <p>This is the third step. One more last before the end.</p>
     </div>
   </li>
   <li class="step-item">
-    <div class="step-marker"></div>
+    <div class="step-marker">
+      <span class="icon">
+        <i class="fa fa-flag"></i>
+      </span>
+    </div>
     <div class="step-content">
       <p class="step-title">Step 4</p>
-      <p>And finally the last step. You have successfully completed all 5 steps.</p>
+      <p>Final step. You have completed all the previous steps and end the process.</p>
     </div>
   </li>
 </ul>
@@ -69,17 +69,17 @@ variables:
     </div>
   </li>
   <li class="step-item is-active">
-    <div class="step-marker">
-      <span class="icon">
-        <i class="fa fa-star"></i>
-      </span>
-    </div>
+    <div class="step-marker"></div>
   </li>
   <li class="step-item">
     <div class="step-marker">3</div>
   </li>
   <li class="step-item">
-    <div class="step-marker"></div>
+    <div class="step-marker">
+      <span class="icon">
+        <i class="fa fa-flag"></i>
+      </span>
+    </div>
   </li>
 </ul>
 
@@ -92,63 +92,55 @@ variables:
     </div>
   </li>
   <li class="step-item is-active">
-    <div class="step-marker">
-      <span class="icon">
-        <i class="fa fa-star"></i>
-      </span>
-    </div>
+    <div class="step-marker"></div>
   </li>
   <li class="step-item">
     <div class="step-marker">3</div>
   </li>
   <li class="step-item">
-    <div class="step-marker"></div>
+    <div class="step-marker">
+      <span class="icon">
+        <i class="fa fa-flag"></i>
+      </span>
+    </div>
   </li>
 </ul>
 
 <ul class="steps is-medium">
   <li class="step-item is-completed">
-    <div class="step-marker">
-      <span class="icon">
-        <i class="fa fa-check"></i>
-      </span>
-    </div>
+    <div class="step-marker"></div>
   </li>
   <li class="step-item is-active">
-    <div class="step-marker">
-      <span class="icon">
-        <i class="fa fa-star"></i>
-      </span>
-    </div>
+    <div class="step-marker"></div>
   </li>
   <li class="step-item">
     <div class="step-marker">3</div>
   </li>
   <li class="step-item">
-    <div class="step-marker"></div>
+    <div class="step-marker">
+      <span class="icon">
+        <i class="fa fa-flag"></i>
+      </span>
+    </div>
   </li>
 </ul>
 
 <ul class="steps is-large">
   <li class="step-item is-completed">
-    <div class="step-marker">
-      <span class="icon">
-        <i class="fa fa-check"></i>
-      </span>
-    </div>
+    <div class="step-marker"></div>
   </li>
   <li class="step-item is-active">
-    <div class="step-marker">
-      <span class="icon">
-        <i class="fa fa-star"></i>
-      </span>
-    </div>
+    <div class="step-marker"></div>
   </li>
   <li class="step-item">
     <div class="step-marker">3</div>
   </li>
   <li class="step-item">
-    <div class="step-marker"></div>
+    <div class="step-marker">
+      <span class="icon">
+        <i class="fa fa-flag"></i>
+      </span>
+    </div>
   </li>
 </ul>
 {% endcapture %}
@@ -163,32 +155,32 @@ variables:
     </div>
     <div class="step-content is-primary is-completed">
       <p class="step-title">Step 1</p>
-      <p>This is the first step, which means you start here.</p>
+      <p>This is the first step of the process.</p>
     </div>
   </li>
   <li class="step-item is-info is-completed">
-    <div class="step-marker">
-      <span class="icon">
-        <i class="fa fa-star"></i>
-      </span>
-    </div>
+    <div class="step-marker"></div>
     <div class="step-content">
       <p class="step-title">Step 2</p>
-      <p>This is the second step. Once you complete the first step, you will end up here.</p>
+      <p>This is the second step. You get here once you have completed the first step.</p>
     </div>
   </li>
   <li class="step-item is-warning is-completed">
     <div class="step-marker">3</div>
     <div class="step-content">
       <p class="step-title">Step 3</p>
-      <p>This is the third step. This is halfway between the start and the end.</p>
+      <p>This is the third step. One more last before the end.</p>
     </div>
   </li>
   <li class="step-item is-danger is-active">
-    <div class="step-marker"></div>
+    <div class="step-marker">
+      <span class="icon">
+        <i class="fa fa-flag"></i>
+      </span>
+    </div>
     <div class="step-content">
       <p class="step-title">Step 4</p>
-      <p>And finally the last step. You have successfully completed all 5 steps.</p>
+      <p>Final step. You have completed all the previous steps and end the process.</p>
     </div>
   </li>
 </ul>
@@ -247,5 +239,7 @@ variables:
     </div>
 
     {% include variables.html %}
+
+    <p>Thanks to <a href="https://github.com/aramvisser/bulma-steps" tagret="_blank">aramvisser</a> for the <span class="tag">marker</span> idea and for the sizes mixin declaration (which is smart).</p>
   </div>
 </section>
