--- a/bulma-extensions/steps.html
+++ b/bulma-extensions/steps.html
@@ -240,6 +240,6 @@ variables:
 
     {% include variables.html %}
 
-    <p>Thanks to <a href="https://github.com/aramvisser/bulma-steps" tagret="_blank">aramvisser</a> for the <span class="tag">marker</span> idea and for the sizes mixin declaration (which is smart).</p>
+    <p>Thanks to <a href="https://github.com/aramvisser/bulma-steps" tagret="_blank">aramvisser</a> for the <span class="tag">marker</span> name idea and for the sizes mixin declaration (which is smart).</p>
   </div>
 </section>
