Add inline display for checkradio

--- a/bulma-extensions/checkradio.html
+++ b/bulma-extensions/checkradio.html
@@ -15,6 +15,12 @@ variables:
   <input class="is-checkbox" id="exampleCheckbox" type="checkbox" name="exampleCheckbox" checked="checked">
   <label for="exampleCheckbox">Check me</label>
 </div>
+<div class="field">
+  <input class="is-radio" id="exampleRadioInline1" type="radio" name="exampleRadioInline" checked="checked">
+  <label for="exampleRadioInline1">Option 1</label>
+  <input class="is-radio" id="exampleRadioInline2" type="radio" name="exampleRadioInline">
+  <label for="exampleRadioInline2">Option 2</label>
+</div>
 {% endcapture %}
 
 {% capture radio_example %}
