Add icon marker

--- a/bulma-extensions/timeline.html
+++ b/bulma-extensions/timeline.html
@@ -33,7 +33,7 @@ variables:
     </div>
   </li>
   <li class="timeline-item">
-    <div class="timeline-marker is-icon">
+    <div class="timeline-marker">
       <figure class="image is-32x32">
         <img src="http://bulma.io/images/placeholders/32x32.png">
       </figure>
@@ -47,6 +47,9 @@ variables:
     <span class="button is-primary">2017</span>
   </li>
   <li class="timeline-item">
+    <div class="timeline-marker is-icon">
+      <i class="fa fa-flag"></i>
+    </div>
     <div class="timeline-content">
       <p class="heading">March 2017</p>
       <p>Timeline content - Can include any HTML element</p>
@@ -71,7 +74,7 @@ variables:
     </div>
   </li>
   <li class="timeline-item is-warning">
-    <div class="timeline-marker is-icon">
+    <div class="timeline-marker">
       <figure class="image is-32x32">
         <img src="http://bulma.io/images/placeholders/32x32.png">
       </figure>
@@ -85,6 +88,9 @@ variables:
     <span class="button is-primary">2017</span>
   </li>
   <li class="timeline-item is-danger">
+    <div class="timeline-marker is-icon">
+      <i class="fa fa-flag"></i>
+    </div>
     <div class="timeline-content">
       <p class="heading">March 2017</p>
       <p>Timeline content - Can include any HTML element</p>
