--- a/bulma-extensions/timeline.html
+++ b/bulma-extensions/timeline.html
@@ -23,7 +23,7 @@ variables:
 {% capture timeline_example %}
 <ul class="timeline">
   <li class="timeline-header">
-    <span class="button is-primary">Start</span>
+    <span class="tag is-medium is-primary">Start</span>
   </li>
   <li class="timeline-item">
     <div class="timeline-marker"></div>
@@ -44,7 +44,7 @@ variables:
     </div>
   </li>
   <li class="timeline-header">
-    <span class="button is-primary">2017</span>
+    <span class="tag is-primary">2017</span>
   </li>
   <li class="timeline-item">
     <div class="timeline-marker is-icon">
@@ -56,7 +56,7 @@ variables:
     </div>
   </li>
   <li class="timeline-header">
-    <span class="button is-primary">End</span>
+    <span class="tag is-medium is-primary">End</span>
   </li>
 </ul>
 {% endcapture %}
@@ -64,7 +64,7 @@ variables:
 {% capture timeline_colors_example %}
 <ul class="timeline">
   <li class="timeline-header">
-    <span class="button is-primary">Start</span>
+    <span class="tag is-medium is-primary">Start</span>
   </li>
   <li class="timeline-item is-primary">
     <div class="timeline-marker"></div>
@@ -85,7 +85,7 @@ variables:
     </div>
   </li>
   <li class="timeline-header">
-    <span class="button is-primary">2017</span>
+    <span class="tag is-primary">2017</span>
   </li>
   <li class="timeline-item is-danger">
     <div class="timeline-marker is-icon">
@@ -97,7 +97,7 @@ variables:
     </div>
   </li>
   <li class="timeline-header">
-    <span class="button is-primary">End</span>
+    <span class="tag is-medium is-primary">End</span>
   </li>
 </ul>
 {% endcapture %}
