Add horizontal pricing table

--- a/bulma-extensions/pricing-table.html
+++ b/bulma-extensions/pricing-table.html
@@ -21,54 +21,122 @@ variables:
 ---
 
 {% capture pricingtable_example %}
-<div class="pricing-table is-hoverable">
-  <ul class="pricing-plan">
-    <li class="plan-header">Starter</li>
-    <li class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>20</span>/month</li>
-    <li class="plan-item">20GB Storage</li>
-    <li class="plan-item">100 Domains</li>
-    <li class="plan-item">-</li>
-    <li class="plan-item">-</li>
-    <li class="plan-action">
+<div class="pricing-table">
+  <div class="pricing-plan">
+    <div class="plan-header">Starter</div>
+    <div class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>20</span>/month</div>
+    <div class="plan-items">
+      <div class="plan-item">20GB Storage</div>
+      <div class="plan-item">100 Domains</div>
+      <div class="plan-item">-</div>
+      <div class="plan-item">-</div>
+    </div>
+    <div class="plan-footer">
       <button class="button is-fullwidth" disabled="disabled">Current plan</button>
-    </li>
-  </ul>
+    </div>
+  </div>
 
-  <ul class="pricing-plan is-warning">
-    <li class="plan-header">Startups</li>
-    <li class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>40</span>/month</li>
-    <li class="plan-item">20GB Storage</li>
-    <li class="plan-item">25 Domains</li>
-    <li class="plan-item">1TB Bandwidth</li>
-    <li class="plan-item">-</li>
-    <li class="plan-action">
+  <div class="pricing-plan is-warning">
+    <div class="plan-header">Startups</div>
+    <div class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>40</span>/month</div>
+    <div class="plan-items">
+      <div class="plan-item">20GB Storage</div>
+      <div class="plan-item">25 Domains</div>
+      <div class="plan-item">1TB Bandwidth</div>
+      <div class="plan-item">-</div>
+    </div>
+    <div class="plan-footer">
       <button class="button is-fullwidth">Choose</button>
-    </li>
-  </ul>
+    </div>
+  </div>
 
-  <ul class="pricing-plan is-active">
-    <li class="plan-header">Growing Team</li>
-    <li class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>60</span>/month</li>
-    <li class="plan-item">200GB Storage</li>
-    <li class="plan-item">50 Domains</li>
-    <li class="plan-item">1TB Bandwidth</li>
-    <li class="plan-item">100 Email Boxes</li>
-    <li class="plan-action">
+  <div class="pricing-plan is-active">
+    <div class="plan-header">Growing Team</div>
+    <div class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>60</span>/month</div>
+    <div class="plan-items">
+      <div class="plan-item">200GB Storage</div>
+      <div class="plan-item">50 Domains</div>
+      <div class="plan-item">1TB Bandwidth</div>
+      <div class="plan-item">100 Email Boxes</div>
+    </div>
+    <div class="plan-footer">
       <button class="button is-fullwidth">Choose</button>
-    </li>
-  </ul>
+    </div>
+  </div>
 
-  <ul class="pricing-plan is-danger">
-    <li class="plan-header">Enterprise</li>
-    <li class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>100</span>/month</li>
-    <li class="plan-item">2TB Storage</li>
-    <li class="plan-item">100 Domains</li>
-    <li class="plan-item">1TB Bandwidth</li>
-    <li class="plan-item">1000 Email Boxes</li>
-    <li class="plan-action">
+  <div class="pricing-plan is-danger">
+    <div class="plan-header">Enterprise</div>
+    <div class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>100</span>/month</div>
+    <div class="plan-items">
+      <div class="plan-item">2TB Storage</div>
+      <div class="plan-item">100 Domains</div>
+      <div class="plan-item">1TB Bandwidth</div>
+      <div class="plan-item">1000 Email Boxes</div>
+    </div>
+    <div class="plan-footer">
       <button class="button is-fullwidth">Choose</button>
-    </li>
-  </ul>
+    </div>
+  </div>
+</div>
+{% endcapture %}
+
+{% capture pricingtable_horizontal_example %}
+<div class="pricing-table is-horizontal">
+  <div class="pricing-plan">
+    <div class="plan-header">Starter</div>
+    <div class="plan-items">
+      <div class="plan-item">20GB Storage</div>
+      <div class="plan-item">100 Domains</div>
+      <div class="plan-item">-</div>
+      <div class="plan-item">-</div>
+    </div>
+    <div class="plan-footer">
+      <div class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>20</span>/month</div>
+      <button class="button is-fullwidth" disabled="disabled">Current plan</button>
+    </div>
+  </div>
+
+  <div class="pricing-plan is-warning">
+    <div class="plan-header">Startups</div>
+    <div class="plan-items">
+      <div class="plan-item">20GB Storage</div>
+      <div class="plan-item">25 Domains</div>
+      <div class="plan-item">1TB Bandwidth</div>
+      <div class="plan-item">-</div>
+    </div>
+    <div class="plan-footer">
+      <div class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>40</span>/month</div>
+      <button class="button is-fullwidth">Choose</button>
+    </div>
+  </div>
+
+  <div class="pricing-plan is-active">
+    <div class="plan-header">Growing Team</div>
+    <div class="plan-items">
+      <div class="plan-item">200GB Storage</div>
+      <div class="plan-item">50 Domains</div>
+      <div class="plan-item">1TB Bandwidth</div>
+      <div class="plan-item">100 Email Boxes</div>
+    </div>
+    <div class="plan-footer">
+      <div class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>60</span>/month</div>
+      <button class="button is-fullwidth">Choose</button>
+    </div>
+  </div>
+
+  <div class="pricing-plan is-danger">
+    <div class="plan-header">Enterprise</div>
+    <div class="plan-items">
+      <div class="plan-item">2TB Storage</div>
+      <div class="plan-item">100 Domains</div>
+      <div class="plan-item">1TB Bandwidth</div>
+      <div class="plan-item">1000 Email Boxes</div>
+    </div>
+    <div class="plan-footer">
+      <div class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">$</span>100</span>/month</div>
+      <button class="button is-fullwidth">Choose</button>
+    </div>
+  </div>
 </div>
 {% endcapture %}
 
@@ -104,6 +172,13 @@ variables:
       {{pricingtable_example}}
     </div>
     {% highlight html %}{{pricingtable_example}}{% endhighlight %}
+
+    <h3 class="title">Orientation</h3>
+    <h4 class="subtitle">You can choose to display the pricing tables horizontally just by adding <span class="tag">is-horizontal</span> modifier to the pricing-table element.</h4>
+    <div class="bd-example">
+      {{pricingtable_horizontal_example}}
+    </div>
+    {% highlight html %}{{pricingtable_horizontal_example}}{% endhighlight %}
 
     {% include variables.html %}
   </div>
