--- a/bulma-extensions/overview.html
+++ b/bulma-extensions/overview.html
@@ -9,7 +9,19 @@ doc-subtab: overview
 
 <section class="section">
   <div class="container">
-    <h2 class="subtitle">This section gather all my <a href="http://bulma.io" target="_blank">Bulma.io</a> extensions.</h2>
+    <div class="columns">
+      <div class="column">
+        <h2 class="subtitle">This section gather all my <a href="http://bulma.io" target="_blank">Bulma.io</a> extensions.</h2>
+      </div>
+      <div class="column is-narrow">
+        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-extensions" target="_blank">
+          <span class="icon">
+              <i class="fa fa-github"></i>
+          </span>
+          <span>View on Github</span>
+        </a>
+      </div>
+    </div>
 
     {% include anchor.html name="Integration" %}
     <div class="content">
