--- a/bulma-extensions/overview.html
+++ b/bulma-extensions/overview.html
@@ -30,7 +30,7 @@ doc-subtab: overview
         <li>Clone the [bulma repo](https://github.com/jgthms/bulma)</li>
         <li>Under the <span class="tag">sass</span> folder, create a new folder called <span class="tag">extensions</span></li>
         <li>In this new folder, create a new file <span class="tag">switch.sass</span></li>
-        <li>Copy the code form the <span class="tag">bulma-switch repo</p>'s [switch.sass](https://github.com/Wikiki/bulma-switch/blob/master/switch.sass) file into your new file</li>
+        <li>Copy the code form the <span class="tag">bulma-switch repo</span>'s [switch.sass](https://github.com/Wikiki/bulma-switch/blob/master/switch.sass) file into your new file</li>
         <li>In the same folder create a new file <span class="tag">_all.sass</span> (this is not required, but will help when you add more extensions)</li>
         <li>In this file add this code:
 {% highlight sass %}
