--- a/bulma-extensions/overview.html
+++ b/bulma-extensions/overview.html
@@ -27,7 +27,7 @@ doc-subtab: overview
     <div class="content">
       <p>This is an example with the Switch extension.</p>
       <ul>
-        <li>Clone the [bulma repo](https://github.com/jgthms/bulma)</li>
+        <li>Clone the <a href="https://github.com/jgthms/bulma" target="_blank">bulma repo</a></li>
         <li>Under the <span class="tag">sass</span> folder, create a new folder called <span class="tag">extensions</span></li>
         <li>In this new folder, create a new file <span class="tag">switch.sass</span></li>
         <li>Copy the code form the <span class="tag">bulma-switch repo</span>'s <a href="https://github.com/Wikiki/bulma-switch/blob/master/switch.sass" target="_blank">switch.sass</a> file into your new file</li>
