Fix typo for link url

--- a/bulma-extensions/checkradio.html
+++ b/bulma-extensions/checkradio.html
@@ -150,7 +150,7 @@ variables:
         </h2>
       </div>
       <div class="column is-narrow">
-        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-badge" target="_blank">
+        <a class="button is-small is-outlined" href="https://github.com/Wikiki/bulma-checkradio" target="_blank">
           <span class="icon">
               <i class="fa fa-github"></i>
           </span>
